crates/pardosa-schema/tests/compile_fail/nested_usize.rs
use pardosa_schema::GenomeSafe;
#[derive(GenomeSafe)]
struct Bad {
    counts: Vec<usize>,
}
fn main() {}
