crates/pardosa-schema/tests/compile_fail/nested_usize.stderr
error: EVT-004: GenomeSafe: usize has platform-dependent size. Use u32/u64 for portable serialization.
 --> tests/compile_fail/nested_usize.rs:4:17
  |
4 |     counts: Vec<usize>,
  |                 ^^^^^
